--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Title of the document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UniLife</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-The content of the document......
-</body>
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <div class="nav-links">
+            <button class="nav-button active">Home</button>
+            <button class="nav-button">About</button>
+        </div>
+        <div class="nav-actions">
+            <button class="action-button">Login</button>
+            <button class="action-button">Sign-In</button>
+        </div>
+    </div>
 
+    <!-- Main Content -->
+    <div class="container">
+        <div class="logo">
+            <img src="image.png" alt="UniLife Logo">
+        </div>
+        <h1 class="welcome">Welcome to UniLife</h1>
+        <button class="made-by">Made by StudInfo3</button>
+    </div>
+
+    <!-- Footnote -->
+    <footer>
+        <p>Follow us on Instagram: <a href="https://instagram.com/unilife_studinfo3" target="_blank">@unilife_studinfo3</a></p>
+    </footer>
+</body>
 </html>
