--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Main Content -->
     <div class="container">
         <div class="logo">
-            <img src="image.png" alt="UniLife Logo">
+            <img src="picture_home.png" alt="UniLife Logo">
         </div>
         <h1 class="welcome">Welcome to UniLife</h1>
         <button class="made-by">Made by StudInfo3</button>
