--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
     <!-- Footnote -->
     <footer>
-        <p>Follow us on Instagram: <a href="https://instagram.com/unilife_studinfo3" target="_blank">@unilife_studinfo3</a></p>
+        <p>Follow us on Instagram: 
+            <a href="https://instagram.com/unilife_studinfo3" target="_blank">@unilife_studinfo3</a>
+        </p>
     </footer>
 </body>
 </html>
