--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
             <a href="https://instagram.com/unilife_studinfo3" target="_blank">@unilife_studinfo3</a>
         </p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
