--- a/index.html
+++ b/index.html
@@ -30,11 +30,32 @@
     </div>
 
     <!-- Footnote -->
-    <footer>
-        <p>Follow us on Instagram: 
+      <div><footer>
+          <div class="footer-container" id="footer">
+              <div class="row">
+                  <div class="col-md-5 footer-left">
+                      <p>StudInfo3</br>
+                      Str. Principalǎ nr. 52, Sat Ruși, jud. Sibiu</br>
+                      C.I.F.: 41840579</br>
+        Email: <a href="mailto:cavalerii@turnulinclinat.ro" target="_top">cavalerii@turnulinclinat.ro</a></p>
+                  </div>
+                  
+                  <div class="col-md-6 offset-md-1 footer-right">
+  <p>Follow us on Instagram: 
             <a href="https://instagram.com/unilife_studinfo3" target="_blank">@unilife_studinfo3</a>
         </p>
-    </footer>
+                     
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col footer-bottom">
+                      <a class="scroll-link" href="#top-content"><i class="fas fa-chevron-up"></i></a>
+                  </div>
+              </div>
+          </div>
+      </footer>
+</div>
+<!-- Script -->
     <script src="script.js"></script>
 </body>
 </html>
