--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
           <div class="footer-container" id="footer">
               <div class="row">
                   <div class="col-md-6 offset-md-1 footer-right">
+                                        <div class="col-md-5 footer-left">
+                      <p>StudInfo3</br>
+                      Str. Principalǎ nr. 52, Sat Ruși, jud. Sibiu</br>
+                      C.I.F.: 41840579</br>
+        Email: <a href="mailto:cavalerii@turnulinclinat.ro" target="_top">cavalerii@turnulinclinat.ro</a></p>
+                  </div>
+                  
   <p>Follow us on Instagram: 
             <a href="https://instagram.com/unilife_studinfo3" target="_blank">@unilife_studinfo3</a>
         </p>
