--- a/index.html
+++ b/index.html
@@ -3,61 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
     <title>UniLife</title>
     <link rel="stylesheet" href="style.css">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <!-- Navigation Bar -->
-    <div class="navbar">
-        <div class="nav-links">
-            <button class="nav-button active">Home</button>
-            <button class="nav-button">About</button>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">UniLife</a>
+            <div class="collapse navbar-collapse justify-content-end">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <button class="btn btn-outline-light mx-1 active">Home</button>
+                    </li>
+                    <li class="nav-item">
+                        <button class="btn btn-outline-light mx-1">About</button>
+                    </li>
+                    <li class="nav-item">
+                        <button class="btn btn-primary mx-1">Login</button>
+                    </li>
+                    <li class="nav-item">
+                        <button class="btn btn-success mx-1">Sign-In</button>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="nav-actions">
-            <button class="action-button">Login</button>
-            <button class="action-button">Sign-In</button>
-        </div>
-    </div>
+    </nav>
 
     <!-- Main Content -->
-    <div class="container">
-        <div class="logo">
-            <img src="picture_home.png" alt="UniLife Logo">
+    <div class="container text-center my-5">
+        <div class="logo mb-4">
+            <img src="picture_home.png" alt="UniLife Logo" class="img-fluid" style="max-width: 200px;">
         </div>
-        <h1 class="welcome">Welcome to UniLife</h1>
-        <button class="made-by">Made by StudInfo3</button>
+        <h1 class="display-3 fw-bold text-primary">Welcome to UniLife</h1>
+        <button class="btn btn-outline-dark mt-3 px-4 py-2">Made by StudInfo3</button>
     </div>
 
-    <!-- Footnote -->
-      <div><footer>
-          <div class="footer-container" id="footer">
-              <div class="row">
-                  <div class="col-md-6 offset-md-1 footer-right">
-                                        <div class="col-md-5 footer-left">
-                      <p>StudInfo3</br>
-                      Str. Principalǎ nr. 52, Sat Ruși, jud. Sibiu</br>
-                      C.I.F.: 41840579</br>
-        Email: <a href="mailto:cavalerii@turnulinclinat.ro" target="_top">cavalerii@turnulinclinat.ro</a></p>
-                  </div>
-                  
-  <p>Follow us on Instagram: 
-            <a href="https://instagram.com/unilife_studinfo3" target="_blank">@unilife_studinfo3</a>
-        </p>
-                     
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col footer-bottom">
-                      <a class="scroll-link" href="#top-content"><i class="fas fa-chevron-up"></i></a>
-                  </div>
-              </div>
-          </div>
-      </footer>
-</div>
-<!-- Script -->
-    <script src="script.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Footer -->
+    <footer class="bg-light text-center text-lg-start mt-auto py-4">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <p class="mb-1">
+                        StudInfo3<br>
+                        Email: <a href="mailto:studinfo3@gmail.com" class="text-decoration-none text-primary">studinfo3@gmail.com</a>
+                    </p>
+                    <p class="mt-3">
+                        Follow us on Instagram: 
+                        <a href="https://instagram.com/unilife_studinfo3" target="_blank" class="text-decoration-none fw-bold">@unilife_studinfo3</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col">
+                    <a href="#top-content" class="text-dark text-decoration-none">
+                        <i class="fas fa-chevron-up"></i> Back to Top
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Script -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
