--- a/about.html
+++ b/about.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About - UniLife</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">UniLife</a>
+            <div class="collapse navbar-collapse justify-content-end">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="btn btn-outline-light mx-1" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-outline-light mx-1 active" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <button class="btn btn-primary mx-1">Login</button>
+                    </li>
+                    <li class="nav-item">
+                        <button class="btn btn-success mx-1">Sign-In</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- About Content -->
+    <div class="container text-center my-5">
+        <h1 class="display-4 fw-bold text-primary">Echipa StudInfo3</h1>
+        <p class="lead text-secondary">Membrii Echipei</p>
+
+        <div class="row justify-content-center mt-4">
+            <!-- Larisa -->
+            <div class="col-md-3 mb-4">
+                <img src="larisa.png" alt="Larisa" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
+                <h5 class="fw-bold mt-2">Larisa</h5>
+                <p class="text-muted">Group Leader</p>
+            </div>
+            <!-- Rebeca -->
+            <div class="col-md-3 mb-4">
+                <img src="rebeca.png" alt="Rebeca" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
+                <h5 class="fw-bold mt-2">Rebeca</h5>
+            </div>
+            <!-- Ovidiu -->
+            <div class="col-md-3 mb-4">
+                <img src="ovidiu.png" alt="Ovidiu" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
+                <h5 class="fw-bold mt-2">Ovidiu</h5>
+            </div>
+            <!-- Cristi -->
+            <div class="col-md-3 mb-4">
+                <img src="cristi.png" alt="Cristi" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
+                <h5 class="fw-bold mt-2">Cristi</h5>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-light text-center py-4">
+        <div class="container">
+            <p class="mb-0">
+                Follow us on Instagram: 
+                <a href="https://instagram.com/unilife_studinfo3" target="_blank" class="fw-bold text-decoration-none text-primary">@unilife_studinfo3</a>
+            </p>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
 
