--- a/login.html
+++ b/login.html
@@ -1,1 +1,100 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - UniLife</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        /* Custom Styles */
+        body {
+            background-color: #f3f3f3;
+        }
+        .gradient-box {
+            background: linear-gradient(to right, #0047ab, #b04fb6);
+            border-radius: 20px;
+            padding: 30px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .form-control {
+            border-radius: 30px;
+            margin-bottom: 20px;
+        }
+        .btn-custom {
+            border-radius: 20px;
+            padding: 10px 20px;
+            background-color: #fff;
+            color: #333;
+            font-weight: bold;
+            border: none;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .btn-custom:hover {
+            background-color: #eee;
+        }
+        .link-custom {
+            color: #6a11cb;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .link-custom:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">UniLife</a>
+            <div class="collapse navbar-collapse justify-content-end">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="btn btn-outline-light mx-1" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-outline-light mx-1" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-outline-light mx-1" href="login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-outline-light mx-1 active" href="signin.html">Sign-In</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Login Box -->
+    <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
+        <div class="gradient-box text-center text-white" style="width: 400px;">
+            <h2 class="fw-bold mb-4">Sign-In</h2>
+            <!-- Form -->
+            <form>
+                <input type="email" class="form-control" placeholder="E-mail" required>
+                <input type="password" class="form-control" placeholder="Password" required>
+                <div class="mb-3">
+                    <span class="text-dark fw-bold">Ai deja un cont? 
+                        <a href="login.html" class="link-custom">Conectează-te.</a>
+                    </span>
+                </div>
+                <button type="submit" class="btn btn-custom w-50">Next</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-light text-center py-3">
+        <p class="mb-0">
+            Follow us on Instagram: 
+            <a href="https://instagram.com/unilife_studinfo3" target="_blank" class="fw-bold text-decoration-none text-primary">@unilife_studinfo3</a>
+        </p>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
 
