--- a/about.html
+++ b/about.html
@@ -30,23 +30,23 @@
         <div class="row justify-content-center mt-4">
             <!-- Larisa -->
             <div class="col-md-3 mb-4">
-                <img src="larisa.png" alt="Larisa" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
+                <img src="larisa.jpg" alt="Larisa" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
                 <h5 class="fw-bold mt-2">Larisa</h5>
                 <p class="text-muted">Group Leader</p>
             </div>
             <!-- Rebeca -->
             <div class="col-md-3 mb-4">
-                <img src="rebeca.png" alt="Rebeca" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
+                <img src="rebeca.jpg" alt="Rebeca" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
                 <h5 class="fw-bold mt-2">Rebeca</h5>
             </div>
             <!-- Ovidiu -->
             <div class="col-md-3 mb-4">
-                <img src="ovidiu.png" alt="Ovidiu" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
+                <img src="ovidiu.jpg" alt="Ovidiu" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
                 <h5 class="fw-bold mt-2">Ovidiu</h5>
             </div>
             <!-- Cristi -->
             <div class="col-md-3 mb-4">
-                <img src="cristi.png" alt="Cristi" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
+                <img src="cristi.jpg" alt="Cristi" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
                 <h5 class="fw-bold mt-2">Cristi</h5>
             </div>
         </div>
