--- a/about.html
+++ b/about.html
@@ -11,14 +11,20 @@
     <!-- Navigation Bar -->
     <div class="navbar">
         <div class="nav-links">
-            <button class="nav-button active">Home</button>
+           <button class="nav-button">
+                <a href="index.html" class="text-decoration-none">Home</a>
+            </button>
             <button class="nav-button">
                 <a href="about.html" class="text-decoration-none">About</a>
             </button>
         </div>
         <div class="nav-actions">
-            <button class="action-button">Login</button>
-            <button class="action-button">Sign-In</button>
+         <button class="nav-button">
+                <a href="login.html" class="text-decoration-none">Login</a>
+            </button>
+          <button class="nav-button">
+                <a href="signin.html" class="text-decoration-none">Sign-In</a>
+            </button>
         </div>
     </div>
 
