--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
             </button>
         </div>
         <div class="nav-actions">
-            <button class="action-button">Login</button>
-            <button class="action-button">Sign-In</button>
+             <button class="nav-button">
+                <a href="login.html" class="text-decoration-none">Login</a>
+            </button>
+            <button class="nav-button">
+                <a href="signin.html" class="text-decoration-none">Sign-In</a>
+            </button>
         </div>
     </div>
 
