--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="about.html" class="text-decoration-none">About</a>
             </button>
         </div>
-        <div class="nav-actions">
+        <div class="nav-links">
              <button class="nav-button">
                 <a href="login.html" class="text-decoration-none">Login</a>
             </button>
