--- a/login.html
+++ b/login.html
@@ -7,6 +7,42 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+ <style>
+        /* Custom Styles */
+        body {
+            background-color: #f3f3f3;
+        }
+        .gradient-box {
+            background: linear-gradient(to right, #0047ab, #b04fb6);
+            border-radius: 20px;
+            padding: 30px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .form-control {
+            border-radius: 30px;
+            margin-bottom: 20px;
+        }
+        .btn-custom {
+            border-radius: 20px;
+            padding: 10px 20px;
+            background-color: #fff;
+            color: #333;
+            font-weight: bold;
+            border: none;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .btn-custom:hover {
+            background-color: #eee;
+        }
+        .link-custom {
+            color: #6a11cb;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .link-custom:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation Bar -->
