--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
     <!-- Navigation Bar -->
     <div class="navbar">
         <div class="nav-links">
-            <button class="nav-button active">Home</button>
+            <button class="nav-button active">
+                <a href="index.html" class="text-decoration-home">Home</a>
+            </button>
             <button class="nav-button">
-                <a href="about.html" class="text-decoration-none">About</a>
+                <a href="about.html" class="text-decoration-about">About</a>
             </button>
         </div>
-        <div class="nav-links">
-             <button class="nav-button">
-                <a href="login.html" class="text-decoration-none">Login</a>
-            </button>
-            <button class="nav-button">
-                <a href="signin.html" class="text-decoration-none">Sign-In</a>
-            </button>
+        <div class="nav-actions">
+            <button class="action-button">Login</button>
+            <button class="action-button">Sign-In</button>
         </div>
     </div>
 
