--- a/about.html
+++ b/about.html
@@ -3,60 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
-    <title>UniLife</title>
-    <link rel="stylesheet" href="style.css">
+    <title>About - UniLife</title>
+    <link rel="stylesheet" href="styleabout.css">
 </head>
 <body>
     <!-- Navigation Bar -->
     <div class="navbar">
         <div class="nav-links">
-           <button class="nav-button">
-                <a href="index.html" class="text-decoration-none">Home</a>
+            <button class="nav-button active">
+                <a href="index.html" class="text-decoration-home">Home</a>
             </button>
             <button class="nav-button">
-                <a href="about.html" class="text-decoration-none">About</a>
+                <a href="about.html" class="text-decoration-about">About</a>
             </button>
         </div>
         <div class="nav-actions">
-         <button class="nav-button">
-                <a href="login.html" class="text-decoration-none">Login</a>
-            </button>
-          <button class="nav-button">
-                <a href="signin.html" class="text-decoration-none">Sign-In</a>
-            </button>
+            <button class="action-button">Login</button>
+            <button class="action-button">Sign-In</button>
         </div>
     </div>
 
-    <!-- Main Content -->
-   <div class="container text-center my-5">
-        <h1 class="display-4 fw-bold text-primary">Echipa StudInfo3</h1>
-        <p class="lead text-secondary">Membrii Echipei</p>
 
-        <div class="row justify-content-center mt-4">
+    <!-- About Content -->
+    <div class="container">
+        <h1 class="display-4">Echipa StudInfo3</h1>
+        <p class="membri-echipei">Membrii Echipei</p>
+
+        <div class="coloane-membri">
             <!-- Larisa -->
-            <div class="col-md-3 mb-4">
-                <img src="larisa.jpg" alt="Larisa" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
-                <h5 class="fw-bold mt-2">Larisa</h5>
-                <p class="text-muted">Group Leader</p>
+            <div class="pozele">
+                <img src="larisa.jpg" alt="Larisa" class="photoleader" style="width: 150px; height: 150px;">
+                <h5 class="nume">Larisa</h5>
+                <p class="leader">Group Leader</p>
             </div>
             <!-- Rebeca -->
-            <div class="col-md-3 mb-4">
-                <img src="rebeca.jpg" alt="Rebeca" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
-                <h5 class="fw-bold mt-2">Rebeca</h5>
+            <div class="pozele">
+                <img src="rebeca.jpg" alt="Rebeca" class="photo" style="width: 150px; height: 150px;">
+                <h5 class="nume">Rebeca</h5>
             </div>
             <!-- Ovidiu -->
-            <div class="col-md-3 mb-4">
-                <img src="ovidiu.jpg" alt="Ovidiu" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
-                <h5 class="fw-bold mt-2">Ovidiu</h5>
+            <div class="pozele">
+                <img src="ovidiu.jpg" alt="Ovidiu" class="photo" style="width: 150px; height: 150px;">
+                <h5 class="nume">Ovidiu</h5>
             </div>
             <!-- Cristi -->
-            <div class="col-md-3 mb-4">
-                <img src="cristi.jpg" alt="Cristi" class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
-                <h5 class="fw-bold mt-2">Cristi</h5>
+            <div class="pozele">
+                <img src="cristi.jpg" alt="Cristi" class="photo" style="width: 150px; height: 150px;">
+                <h5 class="nume">Cristi</h5>
             </div>
         </div>
     </div>
+
+
     <!-- Footnote -->
     <footer>
         
