--- a/about.html
+++ b/about.html
@@ -32,23 +32,23 @@
         <div class="coloane-membri">
             <!-- Larisa -->
             <div class="pozele">
-                <img src="larisa.jpg" alt="Larisa" class="photoleader" style="width: 150px; height: 150px;">
+                <img src="larisa.jpg" alt="Larisa" class="photoleader" >
                 <h5 class="nume">Larisa</h5>
                 <p class="leader">Group Leader</p>
             </div>
             <!-- Rebeca -->
             <div class="pozele">
-                <img src="rebeca.jpg" alt="Rebeca" class="photo" style="width: 150px; height: 150px;">
+                <img src="rebeca.jpg" alt="Rebeca" class="photo" >
                 <h5 class="nume">Rebeca</h5>
             </div>
             <!-- Ovidiu -->
             <div class="pozele">
-                <img src="ovidiu.jpg" alt="Ovidiu" class="photo" style="width: 150px; height: 150px;">
+                <img src="ovidiu.jpg" alt="Ovidiu" class="photo" >
                 <h5 class="nume">Ovidiu</h5>
             </div>
             <!-- Cristi -->
             <div class="pozele">
-                <img src="cristi.jpg" alt="Cristi" class="photo" style="width: 150px; height: 150px;">
+                <img src="cristi.jpg" alt="Cristi" class="photo" >
                 <h5 class="nume">Cristi</h5>
             </div>
         </div>
