--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
             </button>
         </div>
         <div class="nav-actions">
-            <button class="action-button">Login</button>
-            <button class="action-button">Sign-In</button>
+            <button class="action-button">
+                <a href="login.html" class="text-decoration-login">Log-In</a>
+            </button>
+            <button class="action-button">
+                    <a href="singin.html" class="text-decoration-signin">Sign-In</a>
+            </button>
         </div>
     </div>
 
