--- a/signin.html
+++ b/signin.html
@@ -3,69 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
     <title>Sign-In - UniLife</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesignin.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        /* Custom Styles */
-        body {
-            background-color: #f3f3f3;
-        }
-        .gradient-box {
-            background: linear-gradient(to right, #0047ab, #b04fb6);
-            border-radius: 20px;
-            padding: 30px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .form-control {
-            border-radius: 30px;
-            margin-bottom: 20px;
-        }
-        .btn-custom {
-            border-radius: 20px;
-            padding: 10px 20px;
-            background-color: #fff;
-            color: #333;
-            font-weight: bold;
-            border: none;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .btn-custom:hover {
-            background-color: #eee;
-        }
-        .link-custom {
-            color: #6a11cb;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .link-custom:hover {
-            text-decoration: underline;
-        }
-    </style>
+
+        
 </head>
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">UniLife</a>
-            <div class="collapse navbar-collapse justify-content-end">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="btn btn-outline-light mx-1" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-outline-light mx-1" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-outline-light mx-1" href="login.html">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-outline-light mx-1 active" href="signin.html">Sign-In</a>
-                    </li>
-                </ul>
-            </div>
+    <div class="navbar">
+        <div class="nav-links">
+            <button class="nav-button active">
+                <a href="index.html" class="text-decoration-home">Home</a>
+            </button>
+            <button class="nav-button">
+                <a href="about.html" class="text-decoration-about">About</a>
+            </button>
         </div>
-    </nav>
+        <div class="nav-actions">
+            <button class="action-button">
+                <a href="login.html" class="text-decoration-login">Log-In</a>
+            </button>
+            <button class="action-button">
+                    <a href="singin.html" class="text-decoration-signin">Sign-In</a>
+            </button>
+        </div>
+    </div>
 
     <!-- Sign-In Box -->
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
@@ -94,7 +58,6 @@
             <a href="https://instagram.com/unilife_studinfo3" target="_blank" class="fw-bold text-decoration-none text-primary">@unilife_studinfo3</a>
         </p>
     </footer>
-
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
