--- a/login.html
+++ b/login.html
@@ -30,16 +30,16 @@
             </button>
         </div>
     </div>
-    <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
+   <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
         <div class="gradient-box text-center text-white" style="width: 400px;">
-            <h2 class="fw-bold mb-4">Sign-In</h2>
+            <h2 class="fw-bold mb-4">Log-In</h2>
             <!-- Form -->
             <form>
                 <input type="email" class="form-control" placeholder="E-mail" required>
                 <input type="password" class="form-control" placeholder="Password" required>
                 <div class="mb-3">
-                    <span class="text-dark fw-bold">Ai deja un cont? 
-                        <a href="login.html" class="link-custom">Conectează-te.</a>
+                    <span class="text-dark fw-bold">Nu ai cont?
+                        <a href="singin.html.html" class="link-custom">Sign-In</a>
                     </span>
                 </div>
                 <button type="submit" class="btn btn-custom w-50">Next</button>
