--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 <a href="login.html" class="text-decoration-login">Log-In</a>
             </button>
             <button class="action-button">
-                    <a href="singin.html" class="text-decoration-signin">Sign-In</a>
+                    <a href="signin.html" class="text-decoration-signin">Sign-In</a>
             </button>
         </div>
     </div>
