--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
                 <input type="password" class="form-control" placeholder="Password" required>
                 <div class="mb-3">
                     <span class="text-dark fw-bold">Nu ai cont?
-                        <a href="singin.html" class="link-custom">Sign-In</a>
+                        <a href="signin.html" class="link-custom">Sign-In</a>
                     </span>
                 </div>
                 <button type="submit" class="btn btn-custom w-50">Next</button>
