--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="index.html" class="text-decoration-home">Home</a>
             </button>
             <button class="nav-button">
-                <a href="about.html" class="text-decoration-about">About</a>
+                <a href="about.html" class="nav-button">About</a>
             </button>
         </div>
         <div class="nav-actions">
