--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 
         <div class="coloane-membri">
             <!-- Larisa -->
-            <div class="pozele">
+            <div class="pozele-L">
                 <img src="larisa.jpg" alt="Larisa" class="photoleader" >
                 <h5 class="nume">Larisa</h5>
                 <p class="leader">Group Leader</p>
