--- a/home1.html
+++ b/home1.html
@@ -4,68 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniLife</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-        }
-        header {
-            background-color: #6a0dad;
-            color: white;
-            padding: 10px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        header h1 {
-            margin: 0;
-        }
-        nav {
-            display: flex;
-            gap: 15px;
-        }
-        nav a {
-            text-decoration: none;
-            color: white;
-            padding: 5px 10px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-        nav a:hover {
-            background-color: #4b0082;
-        }
-        .content {
-            text-align: center;
-            padding: 20px;
-        }
-        .section {
-            display: inline-block;
-            margin: 20px;
-            text-align: center;
-        }
-        .section button {
-            border: none;
-            background-color: #f9f9f9;
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 10px;
-            font-size: 24px;
-            cursor: pointer;
-            transition: transform 0.3s;
-        }
-        .section button:hover {
-            transform: scale(1.1);
-        }
-        .section p {
-            margin: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
