--- a/home1.html
+++ b/home1.html
@@ -31,17 +31,23 @@
     <!-- Main Content -->
                   <div class="content">
         <div class="section">
-            <button onclick="location.href='cumparaturi.html'">🛒</button>
+            <button onclick="location.href='cumparaturi.html'" style="border: none; background: none; padding: 0;">
+    <img src="button1.jpg" alt="Button Image" style="width: 100px; height: auto; cursor: pointer;">
+</button>
             <p><b>Cumparaturi</b></p>
             <p>Caută produsele de care ai nevoie și găsește cele mai bune prețuri și cele mai apropiate magazine.</p>
         </div>
         <div class="section">
-            <button onclick="location.href='calendar.html'">📅</button>
+                        <button onclick="location.href='calendar.html'" style="border: none; background: none; padding: 0;">
+    <img src="button2.jpg" alt="Button Image" style="width: 100px; height: auto; cursor: pointer;">
+</button>
             <p><b>Calendar/Organizator</b></p>
             <p>Folosește calendarul UniLife pentru a-ți ușura viața de student. Adaugă examene, numără prezențele la cursuri și organizează orele de curs și muncă.</p>
         </div>
         <div class="section">
-            <button onclick="location.href='jobs.html'">💼</button>
+                        <button onclick="location.href='jobs.html'" style="border: none; background: none; padding: 0;">
+    <img src="button3.jpg" alt="Button Image" style="width: 100px; height: auto; cursor: pointer;">
+</button>
             <p><b>Joburi/Cursuri</b></p>
             <p>Primește oferte de joburi personalizate, adaptate facultății și specializării tale.</p>
         </div>
