--- a/calendar.html
+++ b/calendar.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
-    <title>Calendar - UniLife</title>
+<link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
+    <title>Calendar-UniLife</title>
     <link rel="stylesheet" href="stylecalendar.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        
 </head>
 <body>
     <!-- Navigation Bar -->
     <div class="navbar">
         <div class="nav-links">
             <button class="nav-button active">
-                <a href="index.html" class="text-decoration-home">Home</a></button>
-            <button class="nav-button">
-                <a href="about.html" class="text-decoration-about">About</a></button>
-            <a href="cumparaturi.html" class="text-decoration-about"> <button class="nav-button">Cumpărături</button></a>
+                <a href="index.html" class="text-decoration-home">Home</a>
+            </button>
+           
+                <a href="about.html" class="text-decoration-about"> <button class="nav-button">About</button></a>
+                <a href="cumparaturi.html" class="text-decoration-about"> <button class="nav-button">Cumpărături</button></a>
                 <a href="calendar.html" class="text-decoration-about"> <button class="nav-button">Calendar</button></a>
                 <a href="jobs.html" class="text-decoration-about"> <button class="nav-button">Jobs & All</button></a>
         </div>
