--- a/jobs.html
+++ b/jobs.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
+    <title>Jobs & All-UniLife</title>
+    <link rel="stylesheet" href="stylejobs.css">
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <div class="nav-links">
+            <button class="nav-button active">
+                <a href="index.html" class="text-decoration-home">Home</a>
+            </button>
+           
+                <a href="about.html" class="text-decoration-about"> <button class="nav-button">About</button></a>
+                <a href="cumparaturi.html" class="text-decoration-about"> <button class="nav-button">Cumpărături</button></a>
+                <a href="calendar.html" class="text-decoration-about"> <button class="nav-button">Calendar</button></a>
+                <a href="jobs.html" class="text-decoration-about"> <button class="nav-button">Jobs & All</button></a>
+        </div>
+        <div class="nav-actions">
+            <button class="action-button">
+                <a href="login.html" class="text-decoration-login">Log-In</a>
+            </button>
+            <button class="action-button">
+                    <a href="singin.html" class="text-decoration-signin">Sign-In</a>
+            </button>
+        </div>
+    </div>
