--- a/login.html
+++ b/login.html
@@ -36,6 +36,10 @@
    <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
         <div class="gradient-box text-center text-white" style="width: 400px;">
             <h2 class="fw-bold mb-4">Log-In</h2>
+            <!--HERE IS SOME CODE FOR A TEST -->
+<input type="text" id="name" name="name" />
+<input type="text" id="pass" name="pass" />
+<input type="submit" id="sub" name="sub" onclick="click();" />
             <!-- Form -->
             <form>
                 <input type="email" class="form-control" placeholder="E-mail" required>
