--- a/login.html
+++ b/login.html
@@ -36,14 +36,12 @@
    <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
         <div class="gradient-box text-center text-white" style="width: 400px;">
             <h2 class="fw-bold mb-4">Log-In</h2>
-            <!--HERE IS SOME CODE FOR A TEST -->
-<input type="text" id="name" name="name" />
-<input type="text" id="pass" name="pass" />
-<input type="submit" id="sub" name="sub" onclick="click();" />
             <!-- Form -->
             <form>
-                <input type="email" class="form-control" placeholder="E-mail" required>
-                <input type="password" class="form-control" placeholder="Password" required>
+                <input type="email" id="name" name="name" class="form-control" placeholder="E-mail" required>
+                <input type="password" id="pass" name="pass" class="form-control" placeholder="Password" required>
+                
+<input type="submit" id="sub" name="sub" onclick="click();" />
                 <div class="mb-3">
                     <span class="text-dark fw-bold">Nu ai cont?
                         <a href="signin.html" class="link-custom">Sign-In</a>
