--- a/signin.html
+++ b/signin.html
@@ -42,7 +42,7 @@
                 <input type="email" class="form-control" placeholder="E-mail" required>
                 <input type="password" class="form-control" placeholder="Password" required>
                 <input type="password" class="form-control" placeholder="Confirm Password" required>
-                <select type="Oras" class="form-control" required> 
+                <select type="Oras" value="" disabled selected class="form-control" required> 
                     <option value="" disabled selected ; >City in which you study</option>
                         <option value="Sibiu">Alba Iulia</option>
                         <option value="Brasov">Arad</option>
