--- a/signin.html
+++ b/signin.html
@@ -43,7 +43,7 @@
                 <input type="password" class="form-control" placeholder="Password" required>
                 <input type="password" class="form-control" placeholder="Confirm Password" required>
                 <select type="Oras" value="" disabled selected class="form-control" required> 
-                    <option value="" disabled selected ; > <input type="password" class="form-control" placeholder="City in which you study?" required></option>
+                    <option value="" disabled selected ; > <input type="password" class="form-control" placeholder="City in which you study?" required/></option>
                         <option value="Sibiu">Alba Iulia</option>
                         <option value="Brasov">Arad</option>
                         <option value="Cluj">Bacău</option>
