--- a/login.html
+++ b/login.html
@@ -45,7 +45,8 @@
                         <a href="signin.html" class="link-custom">Sign-In</a>
                     </span>
                 </div>
-                <button type="submit" class="btn btn-custom w-50">Next</button>
+                <!--<button type="submit" class="btn btn-custom w-50">Next</button>-->
+               <button type="submit" id="sub" name="sub" onclick="click();" class="btn btn-custom w-50">Next</button>
             </form>
         </div>
     </div>
