--- a/home1.html
+++ b/home1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
     <title>Home</title>
-    <link rel="stylesheet" href="stylehome.css">
+    <link rel="stylesheet" href="stylehome1.css">
 </head>
 <body>
     <!-- Navigation Bar -->
