--- a/AccessDenied.html
+++ b/AccessDenied.html
@@ -34,8 +34,7 @@
             <img src="picture_home.png" alt="UniLife Logo">
         </div>
         <h1 class="welcome">Welcome to UniLife</h1>
-        <button class="made-by">Made by StudInfo3</button>
-        <h1 class="error">Funcționalitățile web-site-ului nu sunt disponibile decât după logarea în pagină</h1>
+        <h1 class="welcome">Funcționalitățile web-site-ului nu sunt disponibile decât după logarea în pagină</h1>
     </div>
 
     <!-- Footnote -->
