--- a/AccessDenied.html
+++ b/AccessDenied.html
@@ -34,7 +34,9 @@
             <img src="picture_home.png" alt="UniLife Logo">
         </div>
         <h1 class="welcome">Welcome to UniLife</h1>
-        <h1 class="welcome">Funcționalitățile web-site-ului nu sunt disponibile decât după logarea în pagină</h1>
+        <h1 class="welcome">Funcționalitățile web-site-ului nu sunt disponibile decât </h1>
+        <h1 class="welcome">după logarea în pagină. Vă rugăm să vă logați sau dacă nu </h1>
+        <h1 class="welcome">aveți deja un cont, să vă creați unul. Mulțumim!</h1>
     </div>
 
     <!-- Footnote -->
