--- a/cumparaturi.html
+++ b/cumparaturi.html
@@ -28,5 +28,16 @@
             </button>
         </div>
     </div>
+
+     <!-- Content Section -->
+     
+      <div class="content">
+            <img src="button1.png" alt="Button Image"  class="buttons"  >
+            <h1 class="page-title">Cumpărături</h1>
+            <input type="text" class="search-input" placeholder="Caută produsul dorit">
+            <button class="search-button">
+                <img src="search-icon.png" alt="Search Icon">
+            </button>
+    </div>
 </body>
 </html>
