--- a/AccessDenied.html
+++ b/AccessDenied.html
@@ -34,9 +34,9 @@
             <img src="picture_home.png" alt="UniLife Logo">
         </div>
         <h1 class="welcome">Welcome to UniLife</h1>
-        <h3 class="welcome">Funcționalitățile web-site-ului nu sunt disponibile decât </h3>
-        <h3 class="welcome">după logarea în pagină. Vă rugăm să vă logați sau dacă nu </h3>
-        <h3 class="welcome">aveți deja un cont, să vă creați unul. Mulțumim!</h3>
+        <h3 class="error">Funcționalitățile web-site-ului nu sunt disponibile decât </h3>
+        <h3 class="error">după logarea în pagină. Vă rugăm să vă logați sau dacă nu </h3>
+        <h3 class="error">aveți deja un cont, să vă creați unul. Mulțumim!</h3>
     </div>
 
     <!-- Footnote -->
