--- a/cumparaturi.html
+++ b/cumparaturi.html
@@ -32,7 +32,8 @@
      <!-- Content Section -->
      
       <div class="content">
-            <img src="button1.png" alt="Button Image"  class="buttons"  >
+          
+          <img src="button1.png" alt="Button Image" class="buttons" style="width: 100px; height: 100px;">
             <h1 class="page-title">Cumpărături</h1>
             <input type="text" class="search-input" placeholder="Caută produsul dorit">
             <button class="search-button">
