--- a/cumparaturi.html
+++ b/cumparaturi.html
@@ -37,7 +37,7 @@
             <h1 class="page-title">Cumpărături</h1>
             <input type="text" class="search-input" placeholder="Caută produsul dorit">
             <button class="search-button">
-                <img src="search-icon.png" alt="Search Icon">
+                <img src="search-icon.png" alt="Search Icon"style="width: 15px; height: 15px;">
             </button>
     </div>
 </body>
