--- a/calendar.html
+++ b/calendar.html
@@ -34,7 +34,7 @@
       <div class="content">
           
           <img src="button2.png" alt="Button Image" class="buttons" style="width: 100px; height: 100px;">
-            <h1 class="page-title">Calendar</h1>
+            <h1 class="page-title">Planner</h1>
           
     </div>
 </body>
