--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
                     </span>
                 </div>
                 <!--<button type="submit" class="btn btn-custom w-50">Next</button>-->
-               <button type="submit" id="sub" name="sub" onclick="click();" class="btn btn-custom w-50">Next</button>
+               <button type="submit" id="sub" name="sub" onclick="click();" class="btn btn-custom w-50" class="text" >Next</button>
             </form>
         </div>
     </div>
