--- a/login.html
+++ b/login.html
@@ -37,17 +37,21 @@
         <div class="gradient-box text-center text-white" style="width: 400px;">
             <h2 class="fw-bold mb-4">Log-In</h2>
             <!-- Form -->
-            <form>
-                <input type="email" class="form-control" placeholder="E-mail" required>
-                <input type="password" class="form-control" placeholder="Password" required>
-                <div class="mb-3">
-                    <span class="text-dark fw-bold">Nu ai cont?
-                        <a href="signin.html" class="link-custom">Sign-In</a>
-                    </span>
-                </div>
-                <!--<button type="submit" class="btn btn-custom w-50">Next</button>-->
-               <button type="submit" id="sub" name="sub" onclick="click();" class="btn btn-custom w-50" class="text" >Next</button>
-            </form>
+
+
+<form action="/login" method="POST">
+    <input type="text" name="username" class="form-control" placeholder="Username" required>
+    <input type="password" name="password" class="form-control" placeholder="Password" required>
+    <button type="submit" id="sub" name="sub" class="btn btn-custom w-50">Next</button>
+</form>
+
+
+
+
+
+
+
+
         </div>
     </div>
 
